Add GUI for Krona ChatBot